tests/NormalTests/paczka2/big_fuzzy/71631367.err
Error in line 21: A687 S502 135,6
Error in line 24: MkJOapvXJ S502 70,8
Error in line 25: MkJOapvXJ S572 76,5
Error in line 49: 3qEGfkap A111 12,3
Error in line 47: tjfaZ A661 299,8
Error in line 56: EhPjW A111 203,4
Error in line 62: MkJOapvXJ S502 6,5
Error in line 40: A687 A111 166,9
Error in line 61: tjfaZ A687 28,6
Error in line 86: A687 A661 63,7
Error in line 99: M6fo2E S502 79,9
Error in line 100: tjfaZ A661 67,8
Error in line 96: A687 A111 53,7
Error in line 87: 3qEGfkap A661 226,7
Error in line 120: gNTFxKj A111 96,6
Error in line 122: M6fo2E A111 237,7
Error in line 121: gNTFxKj A661 30,7
Error in line 140: tjfaZ A661 64,2
Error in line 143: 3qEGfkap A687 64,6
Error in line 145: 3qEGfkap A111 02,4
Error in line 141: tjfaZ S502 8,7
Error in line 147: MkJOapvXJ S502 34,7
Error in line 151: A687 S5j2 26,4
Error in line 148: tjfaZ A687 10,3
Error in line 162: gNTFxKj A111 77,3
Error in line 153: A687 S502 99,3
Error in line 181: M6fo2E A111 74,6
Error in line 165: tjfaZ S502 167,8
Error in line 205: gNTFxKj S502 87,3
Error in line 204: tjfaZ A687 68,1
Error in line 157: 3qEGfkap A111 12,0
Error in line 225: A687 A661 424,1
Error in line 230: A687 S502 8,2
Error in line 227: EhPjW A111 47,1
Error in line 236: gNTFxKj A111 54,8
